# Pikzel

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeMacros.txt  CMakePresets.json  CMakeUtils.cmake  LICENSE  README.md
001 - Do Nothing/: CMakeLists.txt
001 - Do Nothing/src/: DoNothing.cpp
001 - Triangle/: CMakeLists.txt
001 - Triangle/Assets/Shaders/: Triangle.frag  Triangle.vert
001 - Triangle/src/: Triangle.cpp
002 - Offline Triangle/: CMakeLists.txt
002 - Textured/: CMakeLists.txt
002 - Textured/Assets/Shaders/: Textured.frag  Textured.vert
002 - Textured/src/: Textured.cpp
003 - Cube/: CMakeLists.txt
003 - Triangle/: CMakeLists.txt
008 - Multiple Lights/: CMakeLists.txt
008 - Multiple Lights/Assets/Shaders/: Lighting.frag
008 - Multiple Lights/src/: Camera.h  MultipleLights.cpp
009 - Model and Mesh/: CMakeLists.txt
009 - Model and Mesh/Assets/Shaders/: Light.frag  Lighting.frag
009 - Model and Mesh/src/: Camera.cpp  Camera.h  ImGuiEx.cpp  ImGuiEx.h  Model.h  ModelAndMesh.cpp  ModelSerializer.h
010 - Framebuffers/: CMakeLists.txt
010 - Framebuffers/src/: Framebuffers.cpp  ImGuiEx.h
011 - Skybox/: CMakeLists.txt
011 - Skybox/Assets/Shaders/: Skybox.frag  Skybox.vert  TexturedModel.frag  TexturedModel.vert
011 - Skybox/src/: Skybox.cpp
014 - Normal Maps/: CMakeLists.txt
014 - Normal Maps/Assets/Shaders/: ColoredModel.frag  FullScreenQuad.vert  LitModel.frag  LitModel.vert  Matrices.glsl
014 - Normal Maps/src/: NormalMaps.cpp
017 - PBR/: CMakeLists.txt
017 - PBR/Assets/Shaders/: PBR.vert  Skybox.vert
017 - PBR/Assets/Textures/: Attribution.txt
017 - PBR/src/: Mesh.h  Model.h  ModelSerializer.h  PBRdemo.cpp
Examples/002 - Textured/: CMakeLists.txt
Examples/002 - Textured/Assets/Shaders/: Textured.frag  Textured.vert
Examples/002 - Textured/src/: Textured.cpp
Examples/009 - Model and Mesh/: CMakeLists.txt
Examples/009 - Model and Mesh/Assets/Shaders/: Lighting.vert
Examples/009 - Model and Mesh/src/: Mesh.h  ModelAndMesh.cpp  ModelSerializer.cpp
Examples/015 - hdr and bloom/: CMakeLists.txt
Examples/015 - hdr and bloom/Assets/Shaders/: ColoredModel.frag  LitModel.frag
Examples/015 - hdr and bloom/src/: HDRdemo.cpp
Examples/016 - Deferred Rendering/: CMakeLists.txt
Examples/016 - Deferred Rendering/Assets/Shaders/: GeometryPass.frag
Examples/016 - Deferred Rendering/src/: DeferredRendering.cpp
Pikzel/: CMakeLists.txt
Pikzel/src/: pch.h
Pikzel/src/Pikzel/: Pikzel.h
Pikzel/src/Pikzel/Components/: Mesh.h  Model.h  ObjectId.h  Relationship.h  Transform.h
Pikzel/src/Pikzel/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  FileSystem.cpp  FileSystem.h  Instrumentor.h  Log.cpp  Log.h  PlatformUtility.cpp  PlatformUtility.h  Utility.cpp  Utility.h  Window.h  main.cpp
Pikzel/src/Pikzel/Events/: ApplicationEvents.h  EventDispatcher.cpp  EventDispatcher.h  Events.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
Pikzel/src/Pikzel/ImGui/: ImGuiEx.cpp  ImGuiEx.h
Pikzel/src/Pikzel/Input/: Input.cpp  Input.h  KeyCodes.h  MouseButtons.h
Pikzel/src/Pikzel/Platform/GLFW/: GLFWWindow.cpp  GLFWWindow.h
Pikzel/src/Pikzel/Platform/Linux/: LinuxPlatformUtility.cpp
Pikzel/src/Pikzel/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLComputeContext.cpp  OpenGLComputeContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLGraphicsContext.cpp  OpenGLGraphicsContext.h  OpenGLImage.h  OpenGLMeshRenderer.cpp  OpenGLPipeline.cpp  OpenGLPipeline.h  OpenGLRenderCore.cpp  OpenGLRenderCore.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  glpch.cpp  glpch.h  imgui_impl_opengl3.cpp
Pikzel/src/Pikzel/Platform/Vulkan/: Buffer.cpp  Buffer.h  DescriptorBinding.h  Image.cpp  Image.h  QueueFamilyIndices.h  SwapChainSupportDetails.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanComputeContext.cpp  VulkanComputeContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFence.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanGraphicsContext.cpp  VulkanGraphicsContext.h  VulkanImage.cpp  VulkanImage.h  VulkanImageGC.cpp  VulkanImageGC.h  VulkanMemoryAllocator.hpp  VulkanMeshRenderer.cpp  VulkanMeshRenderer.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderCore.cpp  VulkanRenderCore.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUtility.cpp  VulkanUtility.h  VulkanWindowGC.cpp  VulkanWindowGC.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  vkpch.h
Pikzel/src/Pikzel/Platform/Windows/: WindowsPlatformUtility.cpp  WindowsWindow.cpp  WindowsWindow.h
Pikzel/src/Pikzel/Renderer/: Buffer.cpp  Buffer.h  ComputeContext.h  EnvironmentIrradiance.comp  EnvironmentPrefilter.comp  EquirectangularToCubeMap.comp  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  Image.h  MeshRenderer.cpp  MeshRenderer.h  ModelRenderer.cpp  ModelRenderer.h  Pipeline.h  RenderCore.cpp  RenderCore.h  Renderer.cpp  Renderer.h  RendererAPI.h  Shader.h  ShaderUtil.cpp  ShaderUtil.h  SixFacesToCubeMap.comp  Texture.cpp  Texture.h  VertexArray.h  sRGB.cpp  sRGB.h
Pikzel/src/Pikzel/Renderer/Shaders/: EnvironmentSpecularBRDF.comp  Triangle.vert
Pikzel/src/Pikzel/Scene/: AssetCache.cpp  AssetCache.h  Camera.cpp  Camera.h  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelAsset.h  ModelAssetLoader.cpp  ModelAssetLoader.h  ModelResource.h  ModelResourceLoader.cpp  ModelResourceLoader.h  ModelSerializer.cpp  ModelSerializer.h  Scene.cpp  Scene.h  SceneRenderer.cpp  SceneRenderer.h  SceneSerializer.cpp  SceneSerializer.h
Pikzel/src/Pikzel/Scene/Shaders/: Lights.glsl  LitModel.frag  LitModel.vert  Mesh.frag  Mesh.vert
Pikzel/src/Pikzel/Serialization/: SceneSerializer.cpp  SceneSerializer.h  Serializer.h  Yaml.h
Pikzel/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Pikzelated/: CMakeLists.txt  EditorImGui.ini
Pikzelated/src/: EditorImGui.ini  HierarchyPanel.cpp  HierarchyPanel.h  Panel.cpp  Panel.h  Pikzelated.cpp  PropertiesPanel.cpp  PropertiesPanel.h  SceneEditor.cpp  SceneEditor.h  SceneExplorerPanel.cpp  SceneExplorerPanel.h  UI.cpp  UI.h
(+128 files in other folders)
